Welcome msg size fix on mobile

--- a/src/assets/partials/layout.scss
+++ b/src/assets/partials/layout.scss
@@ -205,4 +205,7 @@
     .window-title {
         display:none !important;
     }
+    .welcome {
+        font-size:3rem !important;
+    }
 }
